--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -40,10 +40,10 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Please Sign Up</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" name="f" th:action="@{/login}" method="post">
+                        <form role="form" name="f" th:action="@{/register}" method="post">
                             <fieldset>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="E-mail" name="username" type="email" autofocus>
@@ -52,10 +52,9 @@
                                     <input class="form-control" placeholder="Password" name="password" type="password" value="">
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                                <button type="submit" class="btn btn-lg btn-success btn-block">Register</button>
                             </fieldset>
                         </form>
-                        <a th:href="@{/register}">Register</a>
                     </div>
                 </div>
             </div>
