--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
-
+    <script>drawCanvas();</script>
     <title>PostApp</title>
 	
 
@@ -55,7 +55,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bell fa-fw"></i> WebGLPlaceHolder
+                            <i class="fa fa-bell fa-fw"></i> Widok modelu
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
