--- a/src/main/resources/templates/unsubscribedOK.html
+++ b/src/main/resources/templates/unsubscribedOK.html
@@ -51,7 +51,7 @@
 		<div id="page-wrapper">
 			<div class="row">
 				<div class="col-lg-12">
-					<h1 class="page-header" th:text="|Model ${modelname}|"></h1>
+					<h1 class="page-header" th:text="|Model ${modelname} subscription|"></h1>
 				</div>
 				<!-- /.col-lg-12 -->
 			</div>
@@ -60,41 +60,20 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<i class="fa fa-bell fa-fw"></i> WebGLPlaceHolder
-					</div>
-					<!-- /.panel-heading -->
-					<div class="panel-body">WebGl container</div>
-					<!-- /.panel-body -->
-				</div>
-			</div>
-			<div class="col-lg-8">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<i class="fa fa-bell fa-fw"></i> Subscribed users 
-						<a th:if="${issub}" th:href="@{'/subscribe/' + ${modelname}}" class="btn btn-primary">Subscribe</a>
-						<a th:unless="${issub}" th:href="@{'/unsubscribe/' + ${modelname}}" class="btn btn-danger">Unsubscribe</a>
+						<i class="fa fa-bell fa-fw"></i> Message form
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
-						<div class="list-group">
-							<div th:each="user : ${users}">
-								<a href="/mailto/user@user.com"
-									th:href="@{'/mailto/' + ${user}}" class="list-group-item"
-									th:text="${user}"> <i class="fa fa-tasks fa-fw"></i>
-									user@user.com
-								</a>
-								<div></div>
-							</div>
-							<!-- /.panel-body -->
-						</div>
+						<h2>You unsubscribed successfully!</h2>
 					</div>
-					<!-- /.panel .chat-panel -->
+					<!-- /.panel-body -->
 				</div>
-				<!-- /.panel .chat-panel -->
 			</div>
-			<!-- /.col-lg-4 -->
+			<!-- /.panel .chat-panel -->
 		</div>
-		<!-- /.row -->
+		<!-- /.col-lg-4 -->
+	</div>
+	<!-- /.row -->
 	</div>
 	<!-- /#page-wrapper -->
 
