--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -9,8 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
-    <script>drawCanvas();</script>
     <title>PostApp</title>
 	
 
@@ -37,7 +35,7 @@
 	
 </head>
 
-<body>
+<body onload="drawCanvas();">
 
     <div id="wrapper">
 
@@ -76,6 +74,8 @@
     <!-- /#wrapper -->
 
     <div th:replace="fragments/fragments :: scripts"/>
+    <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
+
 
 </body>
 
