--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -74,8 +74,8 @@
     <!-- /#wrapper -->
 
     <div th:replace="fragments/fragments :: scripts"/>
-    <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
-
+    <script th:href="@{/js/threejs/src/Three.js}" src="../js/webgl.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
 
 </body>
 
