--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -57,7 +57,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <canvas id="glCanvas" width="640" height="480"></canvas>
+                            <div id="glCanvas" width="640" height="480"></div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
