Add model submission form

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -91,6 +91,9 @@
                         <li>
                             <a href="/users"><i class="fa fa-user fa-fw"></i> Users</a>
                         </li>
+                        <li>
+                            <a href="/save"><i class="fa fa-upload fa-fw"></i> Upload model</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
