--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -74,7 +74,7 @@
     <!-- /#wrapper -->
 
     <div th:replace="fragments/fragments :: scripts"/>
-    <script src="//cdn.rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
+    <script th:href="@{/vendor/three.js" src = "../vendor/three.js"></script>
     <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
 </body>
 
