--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -74,7 +74,9 @@
     <!-- /#wrapper -->
 
     <div th:replace="fragments/fragments :: scripts"/>
-    <script th:href="@{/vendor/three.js}" src="../vendor/three.js"></script>
+    <script th:href="@{/vendor/threejs/three.js}" src="../vendor/threejs/three.js"></script>
+    <script th:href="@{/vendor/threejs/TrackballControls.js}" src="../vendor/threejs/TrackballControls.js"></script>
+
     <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
 </body>
 
