--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -35,7 +35,7 @@
 	
 </head>
 
-<body onload="drawCanvas();">
+<body>
 
     <div id="wrapper">
 
@@ -76,6 +76,11 @@
     <div th:replace="fragments/fragments :: scripts"/>
     <script th:href="@{/vendor/threejs/three.js}" src="../vendor/threejs/three.js"></script>
     <script th:href="@{/vendor/threejs/TrackballControls.js}" src="../vendor/threejs/TrackballControls.js"></script>
+    <script th:inline="javascript">
+	/*<![CDATA[*/
+		drawCanvas([[${model}]]);
+	/*]]>*/
+	</script>
 
     <script th:href="@{/js/webgl.js}" src="../js/webgl.js"></script>
 </body>
