--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -64,6 +64,7 @@
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">WebGl container</div>
+					<div id="glCanvas"></div>
 					<!-- /.panel-body -->
 				</div>
 			</div>
