--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -63,9 +63,7 @@
 						<i class="fa fa-bell fa-fw"></i> WebGLPlaceHolder
 					</div>
 					<!-- /.panel-heading -->
-					<div class="panel-body">WebGl container</div>
-					<div id="glCanvas"></div>
-					<!-- /.panel-body -->
+					<div class="panel-body"><div id="glCanvas"></div></div>
 				</div>
 			</div>
 			<div class="col-lg-8">
